--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   display: flex;
 align-items: center;
 justify-content: center;
-background-image: url(https://img.freepik.com/premium-photo/dark-background-sky-monochrome-outdoors_53876-331969.jpg?w=740);
-background-repeat:no-repeat;
+background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQAU_8xRlSjCskIYtPm0rxZZb7wPdTbnTdow&s);
+background-repeat:repeat;
 background-size:cover
 }
 .login_wrapper{
@@ -14,14 +14,14 @@ border-radius: 15%;
 }
 .login_header{
   text-align: center;
-  color: white;
+  color: rgb(15, 14, 14);
   font-style: oblique;
 }
 .button{
   text-align: center;
 }
 .data{
-  color:white;
+  color:rgb(12, 11, 11);
   font-style: oblique;
   font-weight: bold;
 }
@@ -33,7 +33,7 @@ width: auto;
 opacity: 90%;
 }
 .link{
-color: white;
+color: rgb(37, 34, 34);
 }
 .intro{
   display: flex;
@@ -66,7 +66,7 @@ color: white;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-image: url(https://t3.ftcdn.net/jpg/02/90/89/76/240_F_290897614_7RdAsk2GmumcGWZ2qklmV74hKlNmznSx.jpg);
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIuaLNdVwA3NCvGnTHkDdFzBaIQGNXRWSOrg&s);
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 20vh;
